static/frontend: fix gopher alignment on empty docs message
Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/335529
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/main/main.css
+++ b/static/frontend/unit/main/main.css
@@ -57,8 +57,11 @@
   }
 }
 .UnitDetails-contentEmpty {
+  align-items: center;
   background-color: var(--color-background-accented);
   color: var(--color-text-subtle);
+  display: flex;
+  flex-direction: column;
   height: 15rem;
   padding-top: 1rem;
   text-align: center;
